tests/snapshots/args_test__invalid_key.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--key"
    - "3232"
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: ArgumentError("Please provide a valid key with length 32. Current: 4. clipboard-sync --help")
