tests/snapshots/args_test__receive_once.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:8924"
    - "--receive-once"
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Listening on local_addr=127.0.0.1:8924 protocol=basic
Waiting to receive clipboard once
