tests/snapshots/args_test__send_once_not_immediate.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:8923"
    - "--send-once"
    - "--ignore-initial-clipboard"
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Waiting to send clipboard once
