tests/snapshots/args_test__test_default_with_protocols_basic.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--protocol"
    - basic
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "[::]:12001"
    - "--allowed-host"
    - "[::1]:0"
    - "--ignore-initial-clipboard"
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Listening on local_addr=[::]:12001 protocol=basic
