tests/snapshots/args_test__test_default_with_protocols_tcp-tls.snap
---
source: tests/args_test.rs
info:
  program: clipboard-sync
  args:
    - "--protocol"
    - tcp-tls
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "[::]:12001"
    - "--allowed-host"
    - "[::1]:0"
    - "--ignore-initial-clipboard"
    - "--verbosity"
    - info=simple
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Listening on local_addr=[::]:12001 protocol=tcp-tls multicast_addr=None certificate_serial=29:25:61:3d:e0:b5:b8:3f:5b:1a:59:e9:f1:18:16:ac:b2:44:45:a5 certificate_dns=pryingly-hard-roof
